# Dramatic-Checkers

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/compiled/dxil/: tile_shapes.comp.dxil  ui_canvas.frag.dxil  ui_canvas.vert.dxil
assets/shaders/compiled/msl/: tile_shapes.comp.msl  ui_canvas.frag.msl  ui_canvas.vert.msl
assets/shaders/source/: compile.bat  tile_shapes.comp.hlsl  ui_canvas.frag.hlsl  ui_canvas.vert.hlsl
src/: main.cpp
